# mindmap-cli

./: .gitignore  CHECKLIST.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  MINDMAP.md  PHASE3_3_PLAN.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PROTOCOL_MINDMAP.md  README.md  RECURSIVE_NAVIGATION_PLANNING_COMPLETE.md  cobertura.xml  data.txt  mise.toml  ops.sh  tarpaulin-report.html  test_debug.rs  test_depth_debug.rs  test_drop.rs  test_result_drop.rs
.github/workflows/: ci.yml  release.yml
benches/: parser.rs
doc/: pretty-console.md
planning/: RECURSIVE_NAVIGATION_ANALYSIS.md  RECURSIVE_NAVIGATION_PLAN.md  UX_ANALYSIS_SUMMARY.md  cli-syntax-changes.md  implementation-multi-id.md  multiple-files.md
proj/: IMPLEMENTATION_COMPLETE.md  PHASE1_COMPLETION_SUMMARY.txt  PHASE1_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION.md  PHASE3_2_3_IMPLEMENTATION.md  PHASE3_2_COMPLETION.md  PHASE3_2_PLAN.md  PHASE3_2_PROGRESS.md  PHASE3_3_COMPLETION.md  PHASE3_3_PLAN.md  PHASE3_COMPLETE.md  PHASE3_IMPLEMENTATION.md  PHASE3_PLANNING_SUMMARY.md  RECURSIVE_NAVIGATION_PLANNING_COMPLETE.md
proj/planning/: README.md  RECURSIVE_NAVIGATION_ANALYSIS.md  RECURSIVE_NAVIGATION_PLAN.md  SUMMARY.md  UX_ANALYSIS.md  UX_ANALYSIS_SUMMARY.md  agent-multi-selection-patterns.md  cli-syntax-changes.md  consolidation_quick_reference.md  implementation-multi-id.md  multiple-node-selection.md  search_vs_list_grep_analysis.md
rustbug/: index.md
src/: cache.rs  context.rs  lib.rs  main.rs  ui.rs
tests/: cli.rs  manual.sh
tests/assets/: test_mindmap.md
