[package]
name = "mindmap-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
chrono = "0.4"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pretty-console = "1.0.3"
atty = "0.2"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1.1"
predicates = "2"
