[package]
name = "mindmap-cli"
version = "0.2.1"
edition = "2024"
authors = ["Björn Roberg <bjorn.roberg@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/roobie/mindmap-cli"
keywords = ["mindmap", "cli", "tool"]
description = "A CLI program for interacting with MINDMAP files, as described here: https://github.com/roobie/rfc/blob/main/mindmap/MINDMAP.md"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
once_cell = "1"
chrono = "0.4"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pretty-console = "1.0.3"
atty = "0.2"
#cargo-tarpaulin = "0.35.1"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1.1"
predicates = "2"
