[package]
name = "mindmap-cli"
version = "0.6.0"
edition = "2024"
authors = ["Björn Roberg <bjorn.roberg@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/roobie/mindmap-cli"
keywords = ["mindmap", "cli", "tool"]
description = "A CLI program for interacting with MINDMAP files, as described here: https://github.com/roobie/rfc/blob/main/mindmap/MINDMAP.md"

[dependencies]
blake3 = { version = "1.8.3", features = ["serde"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pretty-console = "1.0.3"
atty = "0.2"
shell-words = "1.1"
regex = "1"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1.1"
predicates = "2"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parser"
harness = false
